@@ -39,7 +39,7 @@ typedef enum
 	WACOMDEVICETYPE_CURSOR,
 	WACOMDEVICETYPE_STYLUS,
 	WACOMDEVICETYPE_ERASER,
-	WACOMDEVICETYPE_MAX,
+	WACOMDEVICETYPE_MAX
 } WACOMDEVICETYPE;
 
 struct _WACOMDEVICEINFO
